# edenjson

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: edenjson.hxx  json_maybe.hxx  json_value.hxx  parse_result.hxx
src/: edenjson.cxx  json_parser.hxx
test/: CMakeLists.txt  json_maybe.cxx  json_parser.cxx  json_samples.hxx  json_value.cxx
